Fixed the postioning of brand context on tablet and desktop main.scss.

--- a/src/main.scss
+++ b/src/main.scss
@@ -576,18 +576,18 @@ $light-red: #FF9393;
       display: grid;
       grid-template-columns: 1fr 48px 1fr;
       grid-template-rows: 352px 98px;
+      position: relative;
 
       &__context {
         grid-column: 1/3;
         grid-row: 1;
-        display: flex;
-        justify-content: flex-end;
-        padding: 6.25rem 7rem 0 0;
+        padding: 6.25rem 0 0;
         z-index: 1;
         
         .container {
-          width: unset;
-          margin-inline: unset;
+          position: absolute;
+          left: 0;
+          right: 0;
         }
       }
 
@@ -636,7 +636,7 @@ $light-red: #FF9393;
       grid-template-rows: 528px 200px;
 
       &__context {
-        padding: 9.5rem 9.875rem 0;
+        padding: 9.5rem 0 0;
       }
 
       &__heading {
